--- a/Solved/public/index.html
+++ b/Solved/public/index.html
@@ -205,7 +205,7 @@
       <!-- Local JS files -->
       <script src="./assets/js/job.js"></script>
       <script src="./assets/js/form.js"></script>
-      <script src="./assets/js/index.js"></script>
+      <script src="./assets/js/index2.js"></script>
       <script src="app.js"></script>
       <script>
           $("document").ready(function(){
